--- a/styles/AddTaskModal.module.scss
+++ b/styles/AddTaskModal.module.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 .modalOverlay {
+  font-family: "Inter", sans-serif;
   position: fixed;
   top: 0;
   left: 0;
@@ -25,7 +28,7 @@
   }
 
   input {
-    width: 100%;
+    width: 92%;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
