--- a/styles/AddTaskModal.module.scss
+++ b/styles/AddTaskModal.module.scss
@@ -1,69 +1,93 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
 .modalOverlay {
-  font-family: "Inter", sans-serif;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background: #ffffff80;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(8px);
+  z-index: 999;
 }
 
 .modalContent {
   background-color: white;
-  padding: 20px;
+  padding: 2rem;
+  width: 400px;
+  max-width: 90%; 
   border-radius: 10px;
-  width: 90%;
-  max-width: 400px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
 
-  h2 {
-    margin-bottom: 10px;
-    font-size: 20px;
-    color: #333;
-  }
+.taskInput {
+  width: 80%;
+  padding: 13px;
+  margin-bottom: 1rem;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  font-size: 17px;
+}
 
-  input {
-    width: 92%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
+.taskInput:focus {
+  outline: 0;
+}
 
-  .modalActions {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
+.taskInputTitle {
+  font-size: 16px;
+  font-weight: normal;
+  color: #000;
+  line-height: 19.36px;
+  letter-spacing: 2%;
+}
 
-    button {
-      padding: 10px 15px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
+.buttonContainer {
+  text-align: center;
+}
 
-    .cancelButton {
-      background-color: #f5f5f5;
-      color: #333;
+.addButton {
+  background: linear-gradient(275deg, #020024, #090979, #00d4ff);
+  background-size: 600% 600%;
+  -webkit-animation: ButtonAnimation 40s ease infinite;
+  -moz-animation: ButtonAnimation 40s ease infinite;
+  animation: ButtonAnimation 40s ease infinite;
+  transition: 1s;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 1rem;
+}
 
-      &:hover {
-        background-color: #ddd;
-      }
-    }
+.addButton:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 1s;
+  background: #50F097;
+}
 
-    .addButton {
-      background-color: #0099ff;
-      color: white;
+.closeButton {
+  background: linear-gradient(275deg, #F5F4F9, #EFEEF3, #E6E5EC);
+  background-size: 600% 600%;
+  -webkit-animation: ButtonAnimation 40s ease infinite;
+  -moz-animation: ButtonAnimation 40s ease infinite;
+  animation: ButtonAnimation 40s ease infinite;
+  transition: 1s;
+  color: #000;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
 
-      &:hover {
-        background-color: #007acc;
-      }
-    }
-  }
+.closeButton:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 1s;
+  background: #F9437D;
+  color: #fff;
 }
