--- a/styles/DeleteTaskModal.module.scss
+++ b/styles/DeleteTaskModal.module.scss
@@ -1,56 +1,74 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); // Fundo semi-transparente
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(8px); // Fundo embaçado
+  z-index: 999;
+}
 
-.overlay {
-    font-family: "Inter", sans-serif;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .modal {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    width: 400px;
-    max-width: 90%;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  
-  .modal h3 {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .modal p {
-    font-size: 16px;
-    margin-bottom: 20px;
-  }
-  
-  .modal button {
-    padding: 10px 20px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  .modal button:first-of-type {
-    background-color: #f5f5f5;
-    color: #555;
-    margin-right: 10px;
-  }
-  
-  .modal button:last-of-type {
-    background-color: #dc3545;
-    color: #fff;
-  }
-  
+.modalContent {
+  background-color: white;
+  padding: 2rem;
+  width: 400px;
+  max-width: 90%;
+  height: 250px; // Tamanho menor que o modal de adicionar
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto; 
+}
+
+.deleteButton {
+  background-color: #ff5c5c;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  flex: 1;
+  margin-left: 10px;
+}
+
+.cancelButton {
+  background-color: #0070f3;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  flex: 1;
+}
+
+.deleteButton:hover {
+  background-color: #ff4040;
+}
+
+.cancelButton:hover {
+  background-color: #005bb5;
+}
