--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -22,6 +22,12 @@
     margin-bottom: 20px;
     font-size: 24px;
   }
+
+  .card h3 {
+    font-size: 14px;
+    font-weight: normal;
+    color: #c5c3c3;
+  }
   
   .card input {
     width: 93%;
@@ -30,6 +36,8 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     border: 2px solid #ccc;
+    font-weight: bold;
+    font-family: 'Inter', sans-serif;
   }
 
   .card input::placeholder {
