--- a/styles/TaskList.module.scss
+++ b/styles/TaskList.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   padding: 20px;
   max-width: 500px;
-  margin: 0 auto;
+  margin: 4rem auto;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
