--- a/styles/DeleteTaskModal.module.scss
+++ b/styles/DeleteTaskModal.module.scss
@@ -1,14 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
+
 .modalOverlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); // Fundo semi-transparente
+  background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  backdrop-filter: blur(8px); // Fundo embaçado
+  backdrop-filter: blur(8px); 
   z-index: 999;
 }
 
@@ -17,7 +19,7 @@
   padding: 2rem;
   width: 400px;
   max-width: 90%;
-  height: 250px; // Tamanho menor que o modal de adicionar
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -43,32 +45,48 @@
 }
 
 .deleteButton {
-  background-color: #ff5c5c;
+  background: linear-gradient(270deg, #F6877D, #f05353, #d30707);
+  background-size: 400% 400%;
+  -webkit-animation: ButtonAnimation 40s ease infinite;
+  -moz-animation: ButtonAnimation 40s ease infinite;
+  animation: ButtonAnimation 40s ease infinite;
+  transition: 1s;
   color: white;
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  font-family: 'Inter Tight', sans-serif;
   flex: 1;
   margin-left: 10px;
 }
 
+.deleteButton:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 1s;
+}
+
 .cancelButton {
-  background-color: #0070f3;
+  background: linear-gradient(270deg, #EDF3FC, #E7EEFB, #A8B7D7);
+  background-size: 400% 400%;
+  -webkit-animation: ButtonAnimation 40s ease infinite;
+  -moz-animation: ButtonAnimation 40s ease infinite;
+  animation: ButtonAnimation 40s ease infinite;
   color: white;
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  font-family: 'Inter Tight', sans-serif;
   flex: 1;
-}
-
-.deleteButton:hover {
-  background-color: #ff4040;
+  transition: 1s;
 }
 
 .cancelButton:hover {
-  background-color: #005bb5;
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 1s;
 }
