--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 
 .header {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter Tight', sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
