--- a/styles/TaskList.module.scss
+++ b/styles/TaskList.module.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 
 .tasksContainer {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter Tight", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -82,7 +82,11 @@
 }
 
 .addTaskButton {
-  background-color: #0099ff;
+  background: linear-gradient(270deg, #66D3FF, #3FBDFF, #0099FF);
+  background-size: 400% 400%;
+  -webkit-animation: ButtonAnimation 40s ease infinite;
+  -moz-animation: ButtonAnimation 40s ease infinite;
+  animation: ButtonAnimation 40s ease infinite;
   color: white;
   border: none;
   border-radius: 8px;
@@ -90,10 +94,13 @@
   margin-top: 20px;
   cursor: pointer;
   font-size: 16px;
-  transition: background-color 0.3s ease;
+  font-family: 'Inter Tight', sans-serif;
+  transition: 1s;
 
   &:hover {
-    background-color: #007acc;
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transition: 1s;
   }
 
   @media (max-width: 600px) {
