--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -38,7 +38,8 @@
     border-radius: 4px;
     border: 2px solid #ccc;
     font-weight: bold;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter Tight', sans-serif;
+    font-size: 18px;
   }
 
   .card input::placeholder {
