--- a/styles/AddTaskModal.module.scss
+++ b/styles/AddTaskModal.module.scss
@@ -20,75 +20,101 @@
   max-width: 90%; 
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
-.taskInput {
-  width: 80%;
-  padding: 13px;
-  margin-bottom: 1rem;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  font-size: 17px;
-}
-
-.taskInput:focus {
-  outline: 0;
+.modalTitle{
+  font-family: 'Inter Tight', sans-serif;
+  font-weight: 500;
+  font-size: 24px;
 }
 
 .taskInputTitle {
   font-size: 16px;
-  font-weight: normal;
+  font-weight: 400;
   color: #000;
-  line-height: 19.36px;
-  letter-spacing: 2%;
+  margin-bottom: 10px;
+}
+
+.taskInput {
+  width: 100%;
+  padding: 13px;
+  margin-bottom: 1rem;
+  border: 1px solid #D7DDE9;
+  border-radius: 8px;
+  font-size: 17px;
+  font-family: 'Inter Tight', sans-serif;
+  font-weight: 500;
+}
+
+.taskInput::placeholder {
+  font-family: 'Inter Tight', sans-serif;
+}
+
+.taskInput:focus {
+  outline: 0;
+  border-color: #00d4ff;
 }
 
 .buttonContainer {
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: auto;
+}
+
+.addButton, .closeButton {
+  font-family: 'Inter Tight', sans-serif;
+  width: 48%;
+  padding: 12px 0;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 400;
 }
 
 .addButton {
-  background: linear-gradient(275deg, #020024, #090979, #00d4ff);
-  background-size: 600% 600%;
-  -webkit-animation: ButtonAnimation 40s ease infinite;
-  -moz-animation: ButtonAnimation 40s ease infinite;
-  animation: ButtonAnimation 40s ease infinite;
-  transition: 1s;
+  background: linear-gradient(275deg, #0099ff, #00d4ff);
   color: #fff;
-  padding: 0.75rem 1.5rem;
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  margin: 1rem;
-}
-
-.addButton:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  transition: 1s;
-  background: #50F097;
 }
 
 .closeButton {
-  background: linear-gradient(275deg, #F5F4F9, #EFEEF3, #E6E5EC);
-  background-size: 600% 600%;
-  -webkit-animation: ButtonAnimation 40s ease infinite;
-  -moz-animation: ButtonAnimation 40s ease infinite;
-  animation: ButtonAnimation 40s ease infinite;
-  transition: 1s;
+  background: #f5f5f5;
   color: #000;
-  padding: 0.75rem 1.5rem;
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
 }
 
-.closeButton:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  transition: 1s;
-  background: #F9437D;
-  color: #fff;
+@media (max-width: 768px) {
+  .modalContent {
+    width: 100%;
+    height: 100vh;
+    padding: 1.5rem;
+    display: block;
+    flex-direction: column;
+    align-items: right; 
+  }
+
+  .taskInput {
+    font-size: 16px;
+    width: 272px;
+    height: 51px;
+  }
+
+  .addButton, .closeButton {
+    font-size: 15px;
+    padding: 20px 0;
+    margin-bottom: 1rem;
+    width: 80%;
+    font-size: 18px;
+  }
+
+  .buttonContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
