--- a/styles/DeleteTaskModal.module.scss
+++ b/styles/DeleteTaskModal.module.scss
@@ -28,16 +28,6 @@
   position: relative;
 }
 
-.closeButton {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-}
-
 .buttonContainer {
   display: flex;
   justify-content: space-between;
@@ -89,4 +79,30 @@
   transform: translateY(-3px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   transition: 1s;
+}
+
+@media (max-width: 768px) {
+  .modalContent {
+    width: 100%;
+    height: 100vh;
+    padding: 1.5rem;
+    display: block;
+    flex-direction: column;
+  }
+
+  .buttonContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .deleteButton, .cancelButton {
+    width: 80%;
+    margin: auto 0 20px;
+  }
+
+  .ModalSubTitle {
+    width: 75%;
+  }
 }
