--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -3,9 +3,9 @@
 .header {
     font-family: 'Inter Tight', sans-serif;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 10px 20px;
+    padding: 20px;
     border-bottom: 1px solid #eaeaea;
     text-align: center;
 }
@@ -13,21 +13,47 @@
 .logo {
     display: flex;
     align-items: center;
-    font-size: 18px;
+    font-size: 22px; 
     font-weight: bold;
+    margin-bottom: 10px; 
 }
 
 .logo img {
-    width: 40px;
+    width: 50px;
     margin-right: 10px;
 }
 
 .username {
     font-size: 18px;
-    font-weight: normal;
+    font-weight: bold;
+    color: #000;
 }
 
 .datetime {
     font-size: 16px;
-    color: #666;
+    color: #999; 
+    margin-top: 5px; 
+}
+
+@media (max-width: 768px) {
+    .header {
+        padding: 15px;
+        flex-direction: column;
+    }
+
+    .logo img {
+        width: 40px; 
+    }
+
+    .logo {
+        font-size: 20px; 
+    }
+
+    .username {
+        font-size: 16px;
+    }
+
+    .datetime {
+        font-size: 14px;
+    }
 }
